[java] report java version of alternative jre used in run configuration
IJ-CR-23893

GitOrigin-RevId: 4886835c0b75c641d48f8c85f72f9b18c4d5345c